# bevy_ymir

./: COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml
assets/models/: tree.blend  tree.glb
assets/shaders/: clipmap.wgsl
examples/: terrain.rs
src/: components.rs  lib.rs  mesh.rs  noise.rs  object_placement.rs  player.rs  terrain_colors.rs
src/clipmap/: mod.rs  research.md
src/clipmap/shaders/: clipmap.wgsl
src/procspawn/: mod.rs
src/terrain/: mod.rs  utils.rs
