[package]
name = "bevy_ymir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.9.0"
bevy-inspector-egui = "0.15.0"
noise = { version = "0.8.2" }
rayon = "*"
futures-lite = "1.12.0"
bevy_rapier3d = { version = "0.19.0", features = [
    "simd-stable",
    "debug-render",
] }
iyes_loopless= "0.9.1"

[dev-dependencies]
rustpg = { git = "https://github.com/Nilsiker/rustpg" }
