[package]
name = "bevy_ymir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
noise = { version = "0.9.0" }
bevy_rapier3d = { version = "0.26.0", features = [
    "simd-stable",
    "debug-render",
] }
iyes_loopless = "0.9.1"